syntax = "proto3";

package grpcHandlers;

option go_package = "./";

//import "google/api/annotations.proto";

service ServiceName {
  rpc GenerateShortLink(RequestLink) returns (ResponseLink);
  rpc GetOriginalLink(RequestLink) returns (ResponseLink);
}

message RequestLink {
  string link = 1;
}

message ResponseLink {
  string link = 1;
}